tests/ui/traits/const-traits/attr-misuse.stderr
error: `#[const_trait]` attribute cannot be used on required trait methods
  --> $DIR/attr-misuse.rs:5:5
   |
LL |     #[const_trait]
   |     ^^^^^^^^^^^^^^
   |
   = help: `#[const_trait]` can only be applied to traits

error: `#[const_trait]` attribute cannot be used on functions
  --> $DIR/attr-misuse.rs:9:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^
   |
   = help: `#[const_trait]` can only be applied to traits

error: aborting due to 2 previous errors

